[package]
name = "dllib"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dllib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
memmap2 = "0.9.9"
rayon = "1.11.0"
sys-info = "0.9.1"
process-memory = "0.5.0"
memflow = "0.2.4"
windows = "0.62.2"